# bit-round

./: .gitignore  BENCHMARK_SETUP.md  Cargo.toml  GITHUB_ISSUE_BitInformationjl.md  POTENTIAL_BITINFORMATIONJL_BUG.md  README.md  VERIFICATION.md  bench_julia.jl  bench_python.py
benches/: bitround.rs
docker/: Dockerfile.julia  Dockerfile.python  generate_inputs.py  generate_reference.jl  generate_reference.py  test_julia.jl
openspec/: project.md
openspec/changes/add-benchmarking/: proposal.md  tasks.md
openspec/changes/add-benchmarking/specs/benchmarking/: spec.md
openspec/changes/add-python-julia-verification/: tasks.md
openspec/changes/add-python-julia-verification/specs/verification/: spec.md
openspec/changes/archive/2026-01-17-add-benchmarking/: README.md  status.txt
openspec/changes/archive/2026-01-17-add-benchmarking/benchmarking/: spec.md
openspec/changes/archive/2026-01-17-add-bitround-encoder/: proposal.md  tasks.md
openspec/changes/archive/2026-01-17-add-python-julia-verification/: proposal.md  tasks.md
openspec/changes/archive/2026-01-26-climate-data-bitround-usecase/: proposal.md  tasks.md
openspec/changes/climate-data-bitround-usecase/: proposal.md  tasks.md
openspec/changes/climate-data-bitround-usecase/specs/bitround-compression/: spec.md
openspec/changes/climate-data-bitround-usecase/specs/netcdf-download/: spec.md
openspec/changes/climate-data-bitround-usecase/specs/zarr-storage/: spec.md
openspec/changes/update-benchmarking-single-core/: RESEARCH.md  proposal.md  tasks.md
openspec/changes/update-benchmarking-single-core/specs/benchmarking/: spec.md
openspec/specs/bitround/: spec.md
openspec/specs/bitround-compression/: spec.md
openspec/specs/verification/: spec.md
openspec/specs/zarr-storage/: spec.md
scripts/: bench_memory.py  climate_compression.rs  encode_file.jl  generate_reference.jl  generate_reference.py  generate_reference_data.sh  oneshot_julia.jl  oneshot_python.py  run_all_verification.sh  run_benchmarks.py  run_benchmarks.sh  verify_equivalence.py  verify_julia.sh  verify_python.sh
src/: bitround.rs  download.rs  keff.rs  lib.rs  zarr.rs
tests/: verification_julia.rs  verification_python.rs
(+4 files in other folders)
