[package]
name = "bit-round"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
oorandom = "11"
fastrand = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
criterion = "0.5"
rand = "0.8"

[[bench]]
name = "bitround"
harness = false

[[bin]]
name = "bench"
path = "src/bin/bench.rs"

[[bin]]
name = "generate_test_inputs"
path = "src/bin/generate_test_inputs.rs"
