[package]
name = "bit-round"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
oorandom = "11"
fastrand = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zarrs = "0.23.0-beta.6"
zstd = "0.13"
reqwest = { version = "0.13", features = ["blocking"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }

[dev-dependencies]
criterion = "0.5"
rand = "0.8"

[[bench]]
name = "bitround"
harness = false

[[bin]]
name = "bench"
path = "src/bin/bench.rs"

[[bin]]
name = "generate_test_inputs"
path = "src/bin/generate_test_inputs.rs"

[[bin]]
name = "climate-bitround"
path = "src/bin/climate_bitround.rs"

[[bin]]
name = "climate-compression"
path = "scripts/climate_compression.rs"
